--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 # cau hình database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/session06_order
+spring.datasource.url=jdbc:mysql://localhost:3306/project_md5
 spring.datasource.username=root
 spring.datasource.password=300701
 # cau hình hibernate  spring data jpa
